--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.growatt.lib.view.StatusBarHeightView
+    <com.shuoxd.lib.view.StatusBarHeightView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white" />
