--- a/app/src/main/res/layout/dialog_alert.xml
+++ b/app/src/main/res/layout/dialog_alert.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:paddingStart="16dp"
     android:paddingEnd="16dp"
-    tools:context="com.growatt.atess.view.dialog.AlertDialog">
+    tools:context="com.shuoxd.charge.view.dialog.AlertDialog">
 
     <TextView
         android:id="@+id/tv_title"
@@ -16,7 +16,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="24dp"
         tools:text="标题"
-        android:textSize="@dimen/text_subtitle"
+        android:textSize="@dimen/size_content_sp_12"
         android:textStyle="bold" />
 
     <TextView
@@ -24,14 +24,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        tools:text="@string/privacy_dialog_content"
-        android:textColor="@color/text_black" />
+        tools:text="@string/m26_privacy_dialog_content"
+        android:textColor="@color/black" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:layout_marginTop="24dp"
-        android:background="@color/color_line" />
+        android:background="@color/gray_eeeeeee" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -47,8 +47,8 @@
             android:layout_height="36dp"
             android:background="@drawable/button_gray_background"
             android:gravity="center"
-            android:text="@string/confirm"
-            android:textColor="@color/text_gray" />
+            android:text="@string/m18_confirm"
+            android:textColor="@color/color_text_66" />
 
         <Button
             android:id="@+id/bt_red"
@@ -57,8 +57,8 @@
             android:layout_alignParentEnd="true"
             android:background="@drawable/button_red_background"
             android:gravity="center"
-            android:text="@string/cancel"
-            android:textColor="@color/text_white" />
+            android:text="@string/m16_cancel"
+            android:textColor="@color/white" />
 
     </RelativeLayout>
 
