--- a/app/src/main/res/layout/guide_page.xml
+++ b/app/src/main/res/layout/guide_page.xml
@@ -20,8 +20,8 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="@dimen/dp_10"
         android:gravity="center"
+        android:padding="@dimen/dp_10"
         android:text="@string/m1_welcom_erperience"
         android:textColor="@color/splash_background"
         android:textSize="@dimen/size_title_bar"
@@ -46,8 +46,8 @@
         android:id="@+id/tips"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="@dimen/dp_10"
         android:gravity="center"
+        android:padding="@dimen/dp_10"
         android:text="@string/m2_timxon"
         android:textColor="@color/color_text_66"
         android:textSize="@dimen/size_title_sp_14"
@@ -55,6 +55,28 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/car" />
 
+
+    <LinearLayout
+        android:id="@+id/ll_dir"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_10"
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/bt_use"
+        app:layout_constraintTop_toBottomOf="@+id/tips" />
+
+
+    <Button
+        android:id="@+id/bt_use"
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="36dp"
+        android:layout_marginBottom="@dimen/dp_30"
+        android:textSize="@dimen/size_content_sp_12"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
