1.开始开发登录

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,9 @@
     <!--    <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowTranslucentStatus">true</item>
         <item name="android:windowTranslucentNavigation">true</item>-->
+
+        <!--activity的背景色-->
+        <item name="android:windowBackground">@color/color_default_background</item>
     </style>
 
 
