--- a/app/src/main/res/drawable/circle_green.xml
+++ b/app/src/main/res/drawable/circle_green.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="oval">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="oval">
 
-  <size android:height="@dimen/dp_10" android:width="@dimen/dp_10"/>
-    <solid android:color="@color/color_app_main_pressed"/>
+    <size
+        android:width="@dimen/dp_10"
+        android:height="@dimen/dp_10" />
+    <solid android:color="@color/color_app_main_pressed" />
 
 </shape>
