--- a/app/src/main/res/drawable/line_divider_2.xml
+++ b/app/src/main/res/drawable/line_divider_2.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid android:color="@color/gray_aaaaaa" />
-    <size android:height="1dp" />
+    <size android:width="1dp" />
 
 </shape>
