--- a/app/src/main/res/layout/activity_guide.xml
+++ b/app/src/main/res/layout/activity_guide.xml
@@ -8,9 +8,11 @@
 
 
     <androidx.viewpager.widget.ViewPager
-        android:id="@+id/vp"
+        android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
+
 
 
 
