--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
     <include layout="@layout/toolbar" />
 
@@ -73,7 +74,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/til_password"
                 style="@style/style_til"
-                android:hint="@string/m8_mailbox"
+                android:hint="@string/m77_password"
                 app:hintTextAppearance="@style/hintAppearence"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/til_user">
@@ -92,13 +93,13 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/til_reenter_password"
                 style="@style/style_til"
-                android:hint="@string/m9_phone"
+                android:hint="@string/m77_re_enter_password"
                 app:hintTextAppearance="@style/hintAppearence"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/til_password">
 
                 <EditText
-                    android:id="@+id/et_phone"
+                    android:id="@+id/et_reenter_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:drawablePadding="8dp"
@@ -109,11 +110,11 @@
             </com.google.android.material.textfield.TextInputLayout>
 
 
-
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/til_mailbox"
                 style="@style/style_til"
-                android:hint="@string/m9_phone"
+                android:hint="@string/m8_mailbox"
+                android:visibility="gone"
                 app:hintTextAppearance="@style/hintAppearence"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/til_password">
@@ -131,9 +132,29 @@
 
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/til_city"
+                android:id="@+id/til_phone"
                 style="@style/style_til"
                 android:hint="@string/m9_phone"
+                app:hintTextAppearance="@style/hintAppearence"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/til_password">
+
+                <EditText
+                    android:id="@+id/et_phone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:drawablePadding="8dp"
+                    android:paddingBottom="@dimen/dp_15"
+                    android:singleLine="true"
+                    android:textSize="@dimen/size_content_sp_14" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/til_city"
+                style="@style/style_til"
+                android:hint="@string/m78_city"
                 app:hintTextAppearance="@style/hintAppearence"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/til_password">
@@ -153,7 +174,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/til_country"
                 style="@style/style_til"
-                android:hint="@string/m9_phone"
+                android:hint="@string/m79_country"
                 app:hintTextAppearance="@style/hintAppearence"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/til_password">
@@ -170,27 +191,46 @@
             </com.google.android.material.textfield.TextInputLayout>
 
 
-
-
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/til_car_model"
-                style="@style/style_til"
-                android:hint="@string/m9_phone"
-                app:hintTextAppearance="@style/hintAppearence"
-                app:layout_constraintLeft_toLeftOf="parent"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_40"
+                android:layout_marginStart="@dimen/dp_20"
+                android:layout_marginEnd="@dimen/dp_20"
+                android:orientation="vertical"
                 app:layout_constraintTop_toBottomOf="@+id/til_password">
 
-                <EditText
-                    android:id="@+id/et_model"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:drawablePadding="8dp"
-                    android:paddingBottom="@dimen/dp_15"
-                    android:singleLine="true"
-                    android:textSize="@dimen/size_content_sp_14" />
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
 
-            </com.google.android.material.textfield.TextInputLayout>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/color_text_66"
+                        android:textSize="@dimen/size_content_sp_14"
+                        android:text="@string/m80_time_zone" />
+
+
+                    <EditText
+                        android:id="@+id/et_time_zone"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="@dimen/dp_10"
+                        android:background="@null"
+                        android:gravity="center_vertical"
+                        android:inputType="numberDecimal"
+                        android:textSize="@dimen/size_content_sp_14" />
+                </LinearLayout>
+
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_1"
+                    android:background="@color/gray_aaaaaa" />
+
+            </LinearLayout>
 
 
         </LinearLayout>
@@ -205,11 +245,11 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="50dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/btn_login"
         android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/btn_login"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
 
         <ImageView
             android:id="@+id/iv_select"
