--- a/app/src/main/res/layout/activity_charge.xml
+++ b/app/src/main/res/layout/activity_charge.xml
@@ -5,11 +5,21 @@
     android:layout_height="match_parent">
 
 
+    <View
+        android:id="@+id/v_bg"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@drawable/shape_charge_top"
+        app:layout_constraintBottom_toBottomOf="@+id/v_top_bg"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
     <com.shuoxd.lib.view.StatusBarHeightView
         android:id="@+id/status_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -17,17 +27,18 @@
     <View
         android:id="@+id/v_top_bg"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_120"
+        android:layout_height="@dimen/dp_90"
         app:layout_constraintTop_toBottomOf="@+id/status_bar" />
 
 
-    <androidx.constraintlayout.utils.widget.ImageFilterView
+    <ImageView
         android:id="@+id/iv_avatar"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="@dimen/dp_37"
+        android:layout_height="@dimen/dp_37"
         android:layout_centerVertical="true"
         android:layout_marginStart="@dimen/dp_10"
         android:scaleType="centerCrop"
+        android:src="@drawable/mine"
         app:layout_constraintBottom_toBottomOf="@+id/v_top_bg"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="@+id/v_top_bg"
@@ -38,6 +49,7 @@
         android:id="@+id/iv_center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:src="@drawable/lggo_w"
         app:layout_constraintBottom_toBottomOf="@+id/v_top_bg"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -46,118 +58,171 @@
 
     <androidx.constraintlayout.utils.widget.ImageFilterView
         android:id="@+id/iv_set"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="@dimen/dp_37"
+        android:layout_height="@dimen/dp_37"
         android:layout_centerVertical="true"
         android:layout_marginEnd="@dimen/dp_10"
         android:scaleType="centerCrop"
+        android:src="@drawable/setting"
+
         app:layout_constraintBottom_toBottomOf="@+id/v_top_bg"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/v_top_bg"
         app:roundPercent="1" />
 
 
-    <TextView
-        android:id="@+id/tv_charging_setting"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginEnd="@dimen/dp_10"
-        android:layout_toRightOf="@+id/iv_avatar"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/v_top_bg" />
-
-
-    <ImageView
-        android:id="@+id/iv_charge_status"
-        android:layout_width="@dimen/dp_100"
-        android:layout_height="@dimen/dp_100"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_charging_setting" />
-
-
-    <ImageView
-        android:id="@+id/iv_lock"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@+id/iv_charge_status"
-        app:layout_constraintRight_toLeftOf="@+id/iv_charge_status" />
-
-
-    <ImageView
-        android:id="@+id/iv_menu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@+id/iv_charge_status"
-        app:layout_constraintLeft_toRightOf="@+id/iv_charge_status" />
-
-
-    <ImageView
-        android:id="@+id/iv_start"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="@+id/iv_charge_status"
-        app:layout_constraintRight_toRightOf="@+id/iv_charge_status"
-        app:layout_constraintTop_toBottomOf="@+id/iv_charge_status" />
-
-
-    <LinearLayout
-        android:id="@+id/ll_charging"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_100"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/ll_charging2"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_start">
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/v_top_bg">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/tv_charge_choose"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_margin="@dimen/dp_10"
+                android:background="@drawable/setting_layer"
+                android:padding="@dimen/dp_5"
+                android:text="ACBDEFG"
+                android:textColor="@color/white"
+                android:textSize="@dimen/size_content_sp_14"
+                android:textStyle="bold"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
 
-        <com.shuoxd.charge.view.DataItemView
-            android:layout_width="0dp"
-            android:layout_height="@dimen/dp_10"
-            android:layout_weight="1"/>
-
-        <com.shuoxd.charge.view.DataItemView
-            android:layout_width="0dp"
-            android:layout_height="@dimen/dp_10"
-            android:layout_weight="1"/>
-
-        <com.shuoxd.charge.view.DataItemView
-            android:layout_width="0dp"
-            android:layout_height="@dimen/dp_10"
-            android:layout_weight="1"/>
-
-
-    </LinearLayout>
+            <TextView
+                android:id="@+id/tv_charging_setting"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_margin="@dimen/dp_10"
+                android:background="@drawable/setting_layer"
+                android:padding="@dimen/dp_5"
+                android:text="@string/m91_charge_setting"
+                android:textColor="@color/white"
+                android:textSize="@dimen/size_content_sp_14"
+                android:textStyle="bold"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
 
-    <LinearLayout
-        android:id="@+id/ll_charging2"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_100"
-        android:orientation="horizontal"
-        android:layout_marginBottom="@dimen/dp_40"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+            <ImageView
+                android:id="@+id/iv_charge_status"
+                android:layout_width="@dimen/dp_200"
+                android:layout_height="@dimen/dp_200"
+                android:src="@drawable/pre_1"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_charging_setting" />
 
 
-        <com.shuoxd.charge.view.DataItemView
-            android:layout_width="0dp"
-            android:layout_height="@dimen/dp_10"
-            android:layout_weight="1"/>
+            <ImageView
+                android:id="@+id/iv_lock"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/lock"
+                app:layout_constraintBottom_toBottomOf="@+id/iv_charge_status"
+                app:layout_constraintRight_toLeftOf="@+id/iv_charge_status" />
 
 
-        <com.shuoxd.charge.view.DataItemView
-            android:layout_width="0dp"
-            android:layout_height="@dimen/dp_10"
-            android:layout_weight="1"/>
+            <ImageView
+                android:id="@+id/iv_menu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/menu"
+                app:layout_constraintBottom_toBottomOf="@+id/iv_charge_status"
+                app:layout_constraintLeft_toRightOf="@+id/iv_charge_status" />
 
 
-    </LinearLayout>
+            <ImageView
+                android:id="@+id/iv_start"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/dp_10"
+                android:src="@drawable/start"
+                app:layout_constraintLeft_toLeftOf="@+id/iv_charge_status"
+                app:layout_constraintRight_toRightOf="@+id/iv_charge_status"
+                app:layout_constraintTop_toBottomOf="@+id/iv_charge_status" />
+
+
+            <LinearLayout
+                android:id="@+id/ll_charging"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_100"
+                android:layout_marginStart="@dimen/dp_10"
+                android:layout_marginEnd="@dimen/dp_10"
+                android:orientation="horizontal"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/iv_start">
+
+
+                <com.shuoxd.charge.view.DataItemView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    app:lefticon="@drawable/capacity"
+                    app:title="@string/m92_charge_capacity" />
+
+                <com.shuoxd.charge.view.DataItemView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    app:lefticon="@drawable/current"
+                    app:title="@string/m93_current" />
+
+                <com.shuoxd.charge.view.DataItemView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    app:lefticon="@drawable/voltage"
+                    app:title="@string/m94_voltage" />
+
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:id="@+id/ll_charging2"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_100"
+                android:layout_marginStart="@dimen/dp_10"
+                android:layout_marginEnd="@dimen/dp_10"
+                android:orientation="horizontal"
+                android:layout_marginTop="@dimen/dp_10"
+                app:layout_constraintTop_toBottomOf="@+id/ll_charging"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent">
+
+
+                <com.shuoxd.charge.view.DataItemView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    app:lefticon="@drawable/consumption"
+                    app:title="@string/m95_consumption" />
+
+
+                <com.shuoxd.charge.view.DataItemView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="@dimen/dp_10"
+                    android:layout_weight="1"
+                    app:lefticon="@drawable/charge_time"
+                    app:title="@string/m96_charge_time" />
+
+
+            </LinearLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </ScrollView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
