--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -31,6 +31,12 @@
         <attr name="rightButtonText" format="string" />
     </declare-styleable>
 
+    <declare-styleable name="DataItemView">
+        <attr name="lefticon" format="reference" />
+        <attr name="title" format="string" />
+    </declare-styleable>
+
+
     <declare-styleable name="Tab">
         <attr name="tabText" format="string" />
     </declare-styleable>
