--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -95,7 +95,8 @@
     <color name="color_red_80">#CCE2001A</color>
 
 
-
+    <color name="color_gradien_start">#1AC6BA</color>
+    <color name="color_gradien_end">#59C657</color>
 
 
 
