--- a/app/src/main/res/layout/activity_forgot_pwd.xml
+++ b/app/src/main/res/layout/activity_forgot_pwd.xml
@@ -19,7 +19,7 @@
         android:textColor="@color/color_text_33"
         android:textSize="@dimen/size_title_bar"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/title_bar" />
 
 
 
