--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -46,6 +46,7 @@
         android:layout_marginTop="@dimen/dp_80"
         android:layout_marginEnd="@dimen/dp_20"
         android:focusable="false"
+        android:hint="@string/m7_username"
         android:focusableInTouchMode="false"
         app:hintTextAppearance="@style/hintAppearence"
         app:layout_constraintTop_toBottomOf="@+id/tv_experience_hall">
@@ -70,6 +71,7 @@
         android:layout_marginTop="@dimen/dp_10"
         android:layout_marginEnd="@dimen/dp_20"
         android:focusable="false"
+        android:hint="@string/m77_password"
         android:focusableInTouchMode="false"
         app:hintTextAppearance="@style/hintAppearence"
         app:layout_constraintTop_toBottomOf="@+id/til_user"
