--- a/app/src/main/res/layout/add_your_charge.xml
+++ b/app/src/main/res/layout/add_your_charge.xml
@@ -4,59 +4,91 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <include layout="@layout/toolbar" />
+    <com.shuoxd.lib.view.StatusBarHeightView
+        android:id="@+id/status_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <com.shuoxd.charge.view.TitleBarLayout
+        android:id="@+id/title_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/status_bar"
+        app:titleText="@string/m108_add_your_charge" />
 
 
     <TextView
         android:id="@+id/tv_registered"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="@dimen/dp_5"
-        android:text="@string/m11_charge_id"
         android:layout_marginTop="@dimen/dp_50"
+        android:padding="@dimen/dp_5"
+        android:text="@string/m113_enter_serial"
         android:textColor="@color/color_text_66"
-        android:textSize="@dimen/size_title_bar"
+        android:textSize="@dimen/size_content_sp_14"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/title_bar" />
 
 
     <EditText
         android:id="@+id/et_sn"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_height="@dimen/dp_60"
         android:layout_margin="@dimen/dp_30"
+        android:gravity="center"
+        android:background="@drawable/shape_stroke_gradient"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_registered" />
-
 
 
     <Button
         android:id="@+id/bt_add"
-        android:layout_width="match_parent"
+        android:layout_width="@dimen/dp_100"
         android:layout_height="44dp"
         android:layout_marginStart="36dp"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="36dp"
-        app:layout_constraintTop_toBottomOf="@+id/et_sn"
-        app:layout_constraintRight_toRightOf="parent"
+        android:background="@drawable/selector_button_rect"
+        android:text="@string/m114_add"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="@dimen/size_content_sp_12"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:textSize="@dimen/size_content_sp_12" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/et_sn" />
 
 
-
-
-    <Button
-        android:id="@+id/bt_scan"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="44dp"
+        android:layout_height="@dimen/dp_60"
         android:layout_marginStart="36dp"
-        android:layout_marginTop="50dp"
         android:layout_marginEnd="36dp"
-        app:layout_constraintTop_toBottomOf="@+id/bt_add"
+        android:gravity="center"
+        android:layout_marginTop="@dimen/dp_50"
+        android:background="@drawable/selector_button_rect"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:textSize="@dimen/size_content_sp_12" />
+        app:layout_constraintTop_toBottomOf="@+id/bt_add">
+
+
+        <Button
+            android:id="@+id/bt_scan"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@null"
+            android:textAllCaps="false"
+            android:drawablePadding="@dimen/dp_10"
+            android:drawableStart="@drawable/scan"
+            android:text="@string/m115_scan_code"
+            android:textColor="@color/white"
+            android:textSize="@dimen/size_content_sp_12" />
+
+
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
