--- a/app/src/main/res/layout/auth_other_users.xml
+++ b/app/src/main/res/layout/auth_other_users.xml
@@ -18,7 +18,7 @@
         android:textSize="@dimen/size_title_bar"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/title_bar" />
 
 
     <EditText
