--- a/app/src/main/res/layout/activity_charge.xml
+++ b/app/src/main/res/layout/activity_charge.xml
@@ -213,7 +213,7 @@
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
                                 app:lefticon="@drawable/capacity"
-                                app:title="@string/m92_charge_capacity" />
+                                app:title="@string/m92_energy" />
 
                             <com.shuoxd.charge.view.DataItemView
                                 android:id="@+id/dataView_current"
@@ -229,7 +229,7 @@
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
                                 app:lefticon="@drawable/voltage"
-                                app:title="@string/m94_voltage" />
+                                app:title="@string/m128_power" />
 
 
                         </LinearLayout>
