--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,6 +6,16 @@
     android:background="@color/white">
 
 
+    <com.shuoxd.lib.view.StatusBarHeightView
+        android:id="@+id/status_bar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
     <ImageView
         android:id="@+id/loggo"
         android:layout_width="wrap_content"
@@ -24,7 +34,7 @@
         android:src="@drawable/experience_hall"
         app:layout_constraintLeft_toLeftOf="@+id/tv_experience_hall"
         app:layout_constraintRight_toRightOf="@+id/tv_experience_hall"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/status_bar" />
 
     <TextView
         android:id="@+id/tv_experience_hall"
