--- a/app/src/main/res/layout/activity_help_support.xml
+++ b/app/src/main/res/layout/activity_help_support.xml
@@ -1,28 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <include layout="@layout/toolbar" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_support"
+    <com.shuoxd.lib.view.StatusBarHeightView
+        android:id="@+id/status_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title_bar" />
+        android:background="@color/white"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
-
-    <Button
-        android:id="@+id/bt_logout"
+    <com.shuoxd.charge.view.TitleBarLayout
+        android:id="@+id/title_bar"
         android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="36dp"
-        app:layout_constraintTop_toBottomOf="@+id/rv_support"
-        android:textSize="@dimen/size_content_sp_12" />
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/status_bar"
+        app:titleText="@string/m111_help_support" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/tv_support_email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/m143_support_email"
+        android:layout_marginTop="@dimen/dp_20"
+        android:padding="@dimen/dp_15"
+        android:background="@color/white"
+        android:textSize="@dimen/size_content_sp_14"
+        android:textStyle="bold" />
+
+
+
+    <TextView
+        android:id="@+id/tv_support_phone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/m144_support_phone"
+        android:layout_marginTop="@dimen/dp_1"
+        android:padding="@dimen/dp_15"
+        android:background="@color/white"
+        android:textSize="@dimen/size_content_sp_14"
+        android:textStyle="bold" />
+
+
+    <TextView
+        android:id="@+id/tv_support_time"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/m145_support_time"
+        android:layout_marginTop="@dimen/dp_1"
+        android:padding="@dimen/dp_15"
+        android:background="@color/white"
+        android:textSize="@dimen/size_content_sp_14"
+        android:textStyle="bold" />
+
+
+    <TextView
+        android:id="@+id/tv_feekback"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/m146_feedback"
+        android:layout_marginTop="@dimen/dp_1"
+        android:padding="@dimen/dp_15"
+        android:background="@color/white"
+        android:textSize="@dimen/size_content_sp_14"
+        android:textStyle="bold" />
+
+
+</LinearLayout>
