--- a/app/src/main/res/layout/activity_other.xml
+++ b/app/src/main/res/layout/activity_other.xml
@@ -1,25 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
 
-    <include layout="@layout/toolbar" />
-
-    <androidx.recyclerview.widget.RecyclerView
+    <com.shuoxd.lib.view.StatusBarHeightView
+        android:id="@+id/status_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:background="@color/white" />
 
 
-    <Button
-        android:id="@+id/bt_logout"
+    <com.shuoxd.charge.view.TitleBarLayout
+        android:id="@+id/title_bar"
         android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="36dp"
-        android:textSize="@dimen/size_content_sp_12" />
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/status_bar"
+        app:titleText="@string/m112_other" />
+
+
+    <TextView
+        android:id="@+id/tv_support_email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_20"
+        android:background="@color/white"
+        android:gravity="center"
+        android:padding="@dimen/dp_15"
+        android:text="@string/m147_version_information"
+        android:textSize="@dimen/size_content_sp_14"
+        android:textStyle="bold" />
+
+
+    <TextView
+        android:id="@+id/tv_support_phone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_5"
+        android:background="@color/white"
+        android:gravity="center"
+        android:padding="@dimen/dp_15"
+        android:text="@string/m148_privacy_agreement"
+        android:textSize="@dimen/size_content_sp_14"
+        android:textStyle="bold" />
+
+
+    <TextView
+        android:id="@+id/tv_support_time"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_5"
+        android:background="@color/white"
+        android:gravity="center"
+        android:padding="@dimen/dp_15"
+        android:text="@string/m149_delete_account"
+        android:textSize="@dimen/size_content_sp_14"
+        android:textStyle="bold" />
 
 
 </LinearLayout>
