--- a/app/src/main/res/layout/auth_other_users.xml
+++ b/app/src/main/res/layout/auth_other_users.xml
@@ -1,34 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:gravity="center_horizontal"
+    android:orientation="vertical">
 
-    <include layout="@layout/toolbar" />
+    <com.shuoxd.lib.view.StatusBarHeightView
+        android:id="@+id/status_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white" />
+
+
+    <com.shuoxd.charge.view.TitleBarLayout
+        android:id="@+id/title_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:titleText="@string/m109_authorize" />
 
 
     <TextView
-        android:id="@+id/tv_registered"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="@dimen/dp_5"
-        android:text="@string/m11_charge_id"
         android:layout_marginTop="@dimen/dp_50"
+        android:padding="@dimen/dp_5"
+        android:text="@string/m7_username"
         android:textColor="@color/color_text_66"
-        android:textSize="@dimen/size_title_bar"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title_bar" />
+        android:textSize="@dimen/size_title_bar" />
+
+
+    <TextView
+        android:id="@+id/tv_charge_id"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_40"
+        android:layout_margin="@dimen/dp_30"
+        android:padding="@dimen/dp_5"
+        android:background="@drawable/setting_layer"
+        android:gravity="center"
+        android:hint="@string/m136_choose"
+        android:textColorHint="@color/white"
+        android:textColor="@color/white"
+        android:textSize="@dimen/size_content_sp_14" />
 
 
     <EditText
-        android:id="@+id/et_sn"
+        android:id="@+id/et_username"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_height="@dimen/dp_60"
         android:layout_margin="@dimen/dp_30"
-        app:layout_constraintTop_toBottomOf="@+id/tv_registered" />
-
+        android:background="@drawable/shape_stroke_gradient"
+        android:gravity="center" />
 
 
     <Button
@@ -38,15 +60,10 @@
         android:layout_marginStart="36dp"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="36dp"
-        app:layout_constraintTop_toBottomOf="@+id/et_sn"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:background="@drawable/selector_button_rect"
+        android:text="@string/m18_confirm"
+        android:textColor="@color/white"
         android:textSize="@dimen/size_content_sp_12" />
 
 
-
-
-
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
