--- a/app/src/main/res/layout/title_bar_layout.xml
+++ b/app/src/main/res/layout/title_bar_layout.xml
@@ -57,6 +57,7 @@
         android:id="@+id/iv_right"
         android:layout_width="30dp"
         android:layout_height="30dp"
+        android:src="@drawable/ic_add_gray"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
         />
