1.头像点击处理 2.忘记密码功能开发 3.用户协议跳转问题处理
测试版：1.1.20220910.0

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,7 +13,16 @@
 
         <!--activity的背景色-->
         <item name="android:windowBackground">@color/color_default_background</item>
+
+        <item name="editTextStyle">@style/AppEditTextStyle</item>
+
     </style>
+
+
+
+
+
+
 
 
     <!--导航tab-->
