--- a/app/src/main/res/layout/activity_forgot_pwd.xml
+++ b/app/src/main/res/layout/activity_forgot_pwd.xml
@@ -2,89 +2,113 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
-    <include layout="@layout/toolbar" />
+
+    <com.shuoxd.lib.view.StatusBarHeightView
+        android:id="@+id/status_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <com.shuoxd.charge.view.TitleBarLayout
+        android:id="@+id/title_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/status_bar" />
+
 
 
     <TextView
         android:id="@+id/tv_forgot"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/dp_20"
         android:layout_marginTop="@dimen/dp_15"
         android:padding="@dimen/dp_5"
-        android:textStyle="bold"
         android:text="@string/m3_forget_password"
-        android:layout_marginStart="@dimen/dp_20"
         android:textColor="@color/color_text_33"
         android:textSize="@dimen/size_title_bar"
+        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title_bar" />
 
 
+    <LinearLayout
+        android:id="@+id/ll_verify_code"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@+id/tv_forgot"
+        android:padding="36dp">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_marginTop="10dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/til_user"
-        style="@style/style_til"
-        android:layout_marginTop="@dimen/dp_70"
-        android:hint="@string/m7_username"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_forgot">
+            <EditText
+                android:id="@+id/et_phone_or_email"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:hint="@string/m153_email"
+                android:paddingTop="6dp"
+                android:paddingBottom="6dp"
+                android:textColor="@color/color_text_33"
+                android:textSize="@dimen/size_content_sp_12"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tv_send_verify_code"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:background="@drawable/button_border_background"
+                android:gravity="center"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:text="@string/m158_send_verify_code"
+                android:textSize="@dimen/size_content_sp_14" />
+
+        </LinearLayout>
+
+        <View
+            android:id="@+id/view_phone_or_email_line"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginTop="8dp"
+            android:background="@color/color_app_main_pressed" />
 
         <EditText
-            android:id="@+id/et_username"
+            android:id="@+id/et_verify_code"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawablePadding="8dp"
-            android:paddingBottom="@dimen/dp_15"
-            android:singleLine="true"
-            android:textSize="@dimen/size_content_sp_14" />
+            android:layout_marginTop="30dp"
+            android:hint="@string/m159_please_verify_code"
+            android:inputType="number"
+            android:maxLength="6"
+            android:paddingBottom="12dp"
+            android:textColor="@color/color_text_33"
+            android:textSize="@dimen/size_content_sp_12"
+            android:textStyle="bold" />
 
-    </com.google.android.material.textfield.TextInputLayout>
-
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/til_mailbox"
-        style="@style/style_til"
-        android:hint="@string/m8_mailbox"
-        app:hintTextAppearance="@style/hintAppearence"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/til_user">
-
-        <EditText
-            android:id="@+id/et_mailbox"
+        <View
+            android:id="@+id/view_verify_code_line"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawablePadding="8dp"
-            android:paddingBottom="@dimen/dp_15"
-            android:singleLine="true"
-            android:textSize="@dimen/size_content_sp_14" />
+            android:layout_height="2dp"
+            android:background="@color/color_app_main_pressed" />
 
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/til_phone"
-        style="@style/style_til"
-        android:hint="@string/m9_phone"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:hintTextAppearance="@style/hintAppearence"
-        app:layout_constraintTop_toBottomOf="@+id/til_mailbox">
-
-        <EditText
-            android:id="@+id/et_phone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawablePadding="8dp"
-            android:paddingBottom="@dimen/dp_15"
-            android:singleLine="true"
-            android:textSize="@dimen/size_content_sp_14" />
-
-    </com.google.android.material.textfield.TextInputLayout>
+    </LinearLayout>
 
 
     <Button
-        android:id="@+id/btn_login"
+        android:id="@+id/btn_confirm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
@@ -95,12 +119,13 @@
         android:background="@drawable/selector_button_rect"
         android:minWidth="@dimen/dp_250"
         android:padding="@dimen/dp_5"
-        android:text="@string/m4_login"
+        android:textAllCaps="false"
+        android:text="@string/m18_confirm"
         android:textColor="@color/white"
         android:textSize="@dimen/size_title_sp_14"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/til_phone"
+        app:layout_constraintTop_toBottomOf="@+id/ll_verify_code"
         app:layout_constraintVertical_bias="0.2" />
 
 
