1.预定充电开始开发 2.非高峰充电开始开发

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -21,6 +21,12 @@
     </declare-styleable>
 
 
+
+    <declare-styleable name="CheckItemView">
+        <attr name="checkTitle" format="string" />
+    </declare-styleable>
+
+
     <declare-styleable name="PersonalView">
         <attr name="personinfo" format="string" />
     </declare-styleable>
