--- a/app/src/main/res/layout/activity_charge.xml
+++ b/app/src/main/res/layout/activity_charge.xml
@@ -120,6 +120,17 @@
                             app:layout_constraintTop_toTopOf="parent" />
 
 
+                        <ImageView
+                            android:id="@+id/iv_offpeak_tips"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="@dimen/dp_10"
+                            android:layout_marginTop="@dimen/dp_10"
+                            android:src="@drawable/tips"
+                            app:layout_constraintLeft_toLeftOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/tv_charge_choose" />
+
+
                         <TextView
                             android:id="@+id/tv_charging_setting"
                             android:layout_width="wrap_content"
