--- a/app/src/main/res/layout/item_checkbox.xml
+++ b/app/src/main/res/layout/item_checkbox.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_vertical"
+    android:background="@color/white"
     android:orientation="horizontal">
 
 
@@ -10,10 +11,11 @@
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/dp_10"
         android:textSize="@dimen/size_content_sp_14"
         android:textStyle="bold" />
 
-    <Space
+    <androidx.legacy.widget.Space
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1" />
@@ -23,6 +25,7 @@
         android:id="@+id/item_checkbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/dp_10"
         android:button="@drawable/selector_checkbox"
         android:src="@drawable/right" />
 
