--- a/app/src/main/res/layout/item_record.xml
+++ b/app/src/main/res/layout/item_record.xml
@@ -47,7 +47,7 @@
         android:id="@+id/iv_energy"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:src="@drawable/authorize"
+        android:src="@drawable/record_kwh"
         app:layout_constraintBottom_toBottomOf="@+id/tv_gun_name"
         app:layout_constraintLeft_toRightOf="@+id/tv_gun_name"
         app:layout_constraintRight_toLeftOf="@+id/iv_time"
@@ -58,7 +58,7 @@
         android:id="@+id/iv_time"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:src="@drawable/authorize"
+        android:src="@drawable/record_time"
         app:layout_constraintBottom_toBottomOf="@+id/tv_gun_name"
         app:layout_constraintLeft_toRightOf="@+id/iv_energy"
         app:layout_constraintRight_toLeftOf="@+id/iv_cost"
@@ -68,7 +68,7 @@
         android:id="@+id/iv_cost"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:src="@drawable/authorize"
+        android:src="@drawable/record_money"
         app:layout_constraintBottom_toBottomOf="@+id/tv_gun_name"
         app:layout_constraintLeft_toRightOf="@+id/iv_time"
         app:layout_constraintRight_toRightOf="parent"
@@ -93,11 +93,11 @@
         android:id="@+id/tv_energy_value"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:padding="@dimen/dp_10"
-        android:textStyle="bold"
         android:gravity="center"
-        android:textColor="@color/color_text_66"
+        android:padding="@dimen/dp_10"
+        android:textColor="@color/color_text_33"
         android:textSize="@dimen/size_title_sp_12"
+        android:textStyle="bold"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintLeft_toRightOf="@+id/tv_start_time"
         app:layout_constraintRight_toLeftOf="@+id/tv_time_value"
@@ -107,11 +107,11 @@
         android:id="@+id/tv_time_value"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:padding="@dimen/dp_10"
-        android:textStyle="bold"
         android:gravity="center"
-        android:textColor="@color/color_text_66"
+        android:padding="@dimen/dp_10"
+        android:textColor="@color/color_text_33"
         android:textSize="@dimen/size_title_sp_12"
+        android:textStyle="bold"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintLeft_toRightOf="@+id/tv_energy_value"
         app:layout_constraintRight_toLeftOf="@+id/tv_cost_value"
@@ -121,11 +121,11 @@
         android:id="@+id/tv_cost_value"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:padding="@dimen/dp_10"
-        android:textStyle="bold"
         android:gravity="center"
-        android:textColor="@color/color_text_66"
+        android:padding="@dimen/dp_10"
+        android:textColor="@color/color_text_33"
         android:textSize="@dimen/size_title_sp_12"
+        android:textStyle="bold"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintLeft_toRightOf="@+id/tv_time_value"
         app:layout_constraintRight_toRightOf="parent"
@@ -178,14 +178,98 @@
         android:id="@+id/tv_cost_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/m120_money"
         android:gravity="center"
+        android:text="@string/m120_money"
         android:textColor="@color/color_text_66"
         android:textSize="@dimen/size_content_sp_10"
         app:layout_constraintBottom_toBottomOf="@+id/tv_end_time"
         app:layout_constraintLeft_toRightOf="@+id/tv_time_value"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/tv_end_time" />
+
+
+    <View
+        android:id="@+id/bottom_line"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_1"
+        android:background="@color/gray"
+        app:layout_constraintTop_toBottomOf="@+id/tv_end_time" />
+
+    <TextView
+        android:id="@+id/tv_connect_ev"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/dp_10"
+        android:text="@string/m172_connect_ev"
+        android:textColor="@color/color_text_66"
+        android:textSize="@dimen/size_title_sp_12"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/iv_connect"
+        app:layout_constraintTop_toBottomOf="@+id/bottom_line" />
+
+
+    <ImageView
+        android:id="@+id/iv_connect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/recoder_connect"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_connect_ev"
+        app:layout_constraintLeft_toRightOf="@+id/tv_connect_ev"
+        app:layout_constraintRight_toLeftOf="@+id/tv_connect_time"
+        app:layout_constraintTop_toTopOf="@+id/tv_connect_ev" />
+
+
+    <TextView
+        android:id="@+id/tv_connect_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/dp_10"
+        android:text="10:00:00"
+        android:textColor="@color/color_text_66"
+        android:textSize="@dimen/size_title_sp_14"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_connect_ev"
+        app:layout_constraintLeft_toRightOf="@+id/iv_connect"
+        app:layout_constraintRight_toLeftOf="@+id/tv_disconnect_ev"
+        app:layout_constraintTop_toTopOf="@+id/tv_connect_ev" />
+
+
+    <TextView
+        android:id="@+id/tv_disconnect_ev"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/dp_10"
+        android:text="@string/m173_disconnect_ev"
+        android:textColor="@color/color_text_66"
+        android:textSize="@dimen/size_title_sp_12"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_connect_ev"
+        app:layout_constraintLeft_toRightOf="@+id/tv_connect_time"
+        app:layout_constraintRight_toLeftOf="@+id/iv_disconnect"
+        app:layout_constraintTop_toTopOf="@+id/tv_connect_ev" />
+
+    <ImageView
+        android:id="@+id/iv_disconnect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/recoder_disconnect"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_connect_ev"
+        app:layout_constraintRight_toLeftOf="@+id/tv_disconnect_time"
+        app:layout_constraintLeft_toRightOf="@+id/tv_disconnect_ev"
+        app:layout_constraintTop_toTopOf="@+id/tv_connect_ev" />
+
+
+    <TextView
+        android:id="@+id/tv_disconnect_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/dp_10"
+        android:text="20:00:00"
+        android:textColor="@color/color_text_66"
+        android:textSize="@dimen/size_title_sp_14"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_connect_ev"
+        app:layout_constraintLeft_toRightOf="@+id/iv_disconnect"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tv_connect_ev" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
